--- a/.env
+++ b/.env
@@ -28,7 +28,8 @@ VITE_DESC_TEXT_OTHER = "你好坏坏！"
 ## 请前往 高德开放平台注册 Web服务 Key
 ## 请注意不是 Web端 (JS API)，免费申请，每日上限 5000 次
 ## 此处提供的服务可能会超量从而无法访问，请自行申请！请自行申请！请自行申请！
-VITE_WEATHER_KEY = "aa6f0281f31dbff5eb1f9a68f18436ad"
+VITE_WEATHER_KEY = "https://api.oioweb.cn/doc/weather/GetWeather"
+## VITE_WEATHER_KEY = "aa6f0281f31dbff5eb1f9a68f18436ad"
 
 # 建站日期
 ## 若不需要，请设为空即可
